--- a/Hotel/View_layer/ViewRequest.xaml
+++ b/Hotel/View_layer/ViewRequest.xaml
@@ -1,8 +1,8 @@
-﻿<UserControl x:Class="Hotel.View_layer.ViewReturns"
+﻿<UserControl x:Class="Hotel.View_layer.ViewRequest"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
              xmlns:local="clr-namespace:Hotel.View_layer"
              mc:Ignorable="d" 
@@ -14,40 +14,28 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
-
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="190"/>
+                <ColumnDefinition Width="270"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-
             <StackPanel Grid.Column="0"
-                                    Orientation="Horizontal">
+                            Orientation="Horizontal">
                 <StackPanel.Background>
                     <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
                         <GradientStop Color="{StaticResource degradadooro1}" Offset="0"/>
                         <GradientStop Color="{StaticResource degradadooro5}" Offset="1"/>
                     </LinearGradientBrush>
                 </StackPanel.Background>
-                <fa:IconImage Icon="ThumbsDown"
-                                          Height="24"
+                <fa:IconImage Icon="FileLines"
                                           Width="24"
                                           Foreground="{StaticResource tittleColor4}"
                                           Margin="35,0,10,0"/>
-                <TextBlock Text="Devoluciones"
+                <TextBlock Text="Solicitudes de Cotización"
                                        Foreground="{StaticResource tittleColor4}"
                                        FontSize="17"
                                        FontFamily="Alegreya Bold"
                                        VerticalAlignment="Center"/>
-
-            </StackPanel>
-
-            <StackPanel Grid.Column="1"
-                                    Orientation="Horizontal"
-                                    FlowDirection="LeftToRight"
-                                    VerticalAlignment="Center"
-                                    Margin="0,0,10,0">
-                <!--Botones complementarios-->
 
             </StackPanel>
         </Grid>
@@ -71,8 +59,8 @@
             </StackPanel>
         </Grid>
         <Grid Grid.Row="2">
-            <DataGrid x:Name="listBoxOrdenes" AutoGenerateColumns="False" Margin="10 0 10 10" 
-          Background="{StaticResource tittleColor5}"
+            <DataGrid x:Name="listBoxSolicitudes" AutoGenerateColumns="False" Margin="10 0 10 10" 
+          Background="{StaticResource tittleColor5}" 
            IsReadOnly="True" VerticalGridLinesBrush="{StaticResource tittleColor1}" HorizontalGridLinesBrush="{StaticResource tittleColor1}" HeadersVisibility="Column">
 
                 <DataGrid.Resources>
@@ -90,18 +78,16 @@
                         <Style.Triggers>
                             <Trigger Property="IsSelected" Value="True">
                                 <Setter Property="Background" Value="{StaticResource SelectedBackgroundBrush}" />
-                                <Setter Property="FontSize" Value="14"/>
                             </Trigger>
                         </Style.Triggers>
                     </Style>
                 </DataGrid.Resources>
 
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Estado" Binding="{Binding Estado}" Width="*"/>
-                    <DataGridTextColumn Header="Fecha Entregada" Binding="{Binding FechaEntrega}" Width="*"/>
-                    <DataGridTextColumn Header="Departamento" Binding="{Binding Departamento}" Width="*"/>
-                    <DataGridTextColumn Header="Tipo de compra" Binding="{Binding TipoCompra}" Width="*"/>
-                    <DataGridTextColumn Header="Monto Total" Binding="{Binding MontoTotal}" Width="*"/>
+                    <DataGridTextColumn Header="Descripción" Binding="{Binding Descripcion}" Width="*"/>
+                    <DataGridTextColumn Header="Cantidad / Peso" Binding="{Binding Cantidad}" Width="*"/>
+                    <DataGridTextColumn Header="Antecedentes" Binding="{Binding Antecedentes}" Width="*"/>
+                    <DataGridTextColumn Header="Precuaciones / Recomendaciones" Binding="{Binding Precauciones}" Width="*"/>
                 </DataGrid.Columns>
                 <DataGrid.ColumnHeaderStyle>
                     <Style TargetType="DataGridColumnHeader">
@@ -114,12 +100,13 @@
                     </Style>
                 </DataGrid.ColumnHeaderStyle>
             </DataGrid>
+
         </Grid>
-        <Grid Grid.Row="3">
+        <Grid Grid.Row="3" Margin="10 0 10 0">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="center">
-                <Button Content="Hacer Devolución"
-                            Click="btnDevolucion_Click"
-                            Width="230"
+                <Button Content="Eliminar"
+                            Click="btnEliminar_Click"
+                            Width="270"
                             Height="40"
                             Margin="10"
                             Style="{StaticResource CustomButtonStyle}"/>
